--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "mongoose": "^6.1.3",
     "noty": "^3.2.0-beta-deprecated",
     "passport": "^0.5.2",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "socket.io": "^4.4.0"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
